--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.2.2",
     "@angular/router": "~10.2.2",
     "bootstrap": "^4.5.3",
+    "ngx-pagination": "^5.0.0",
     "ngx-star-rating": "0.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
